--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 }
 
 /* generics */
+body{
+    max-width: 100%;
+}
 /* Utils */
 .container{
     width: 1200px;
@@ -36,6 +39,10 @@
 }
 .d-flex{
     display: flex;
+}
+
+.il-block{
+    display: inline-block;
 }
 
 
@@ -72,5 +79,40 @@ div .log-in-cell{
     line-height: 40px;
     text-align: center;
     
+}
+
+#jumbotron{
+    width: 100%;
+    height: 700px;
+    background-image: url(img/img/jumbo.png);
+    background-position: center;
+    background-size: cover;
+}
+
+.content {
+    padding-top: 100px ;
+    text-align: center;
+    margin: 0% auto;
+    
+}
+h1{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.download-cell{
+    margin-top: 30px;
+    margin-right: 20px;
+    padding: 15px;
+    color: black;
+    background-color: #fff;
+    border-radius: 50px;
+}
+
+.open{
+margin-top: 30px;
+padding: 15px;
+background-color: #22272A;
+border-radius: 50px;
 }
 
