--- a/style.css
+++ b/style.css
@@ -46,9 +46,11 @@ body{
 }
 
 .bg-white{
+    
     background-color: #fff;
 }
 .bg-gray{
+   
     background-color: lightgrey;
 }
 
@@ -129,8 +131,45 @@ padding: 15px;
 background-color: #22272A;
 border-radius: 50px;
 }
-
-.group-col{
+/* main */
+.img-col{
    
     text-align: end;
 }
+
+.info{
+    padding-left: 7%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    text-align: start;
+    line-height: 30px;
+}
+
+h3{
+    line-height: 40px;
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+h2{
+    color: black;
+}
+h2{
+    font-size: 50px;
+    margin: 30px auto;
+}
+.full-col{
+    padding-top: 100px;
+    text-align: center;
+
+}
+
+.big-img{
+    min-width: 1200px;
+}
+ 
+section.bg-white,section.bg-gray{
+
+    margin-top: 100px;
+    margin-bottom: 100px;
+} 
